--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist/
 
 # Compiled Python bytecode
 *.py[cod]
-
+*.pyc
 # Log files
 *.log
 
@@ -22,6 +22,7 @@ dist/
 # Maven
 target/
 dist/
+python3_8/
 
 # JetBrains IDE
 .idea/
