--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Pygments==2.9.0
 PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
+reportlab==3.5.67
 requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
